고객용 API 구현
